--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clokwerk = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 serenity = "0.9.0-rc.1"
