--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pit-tracker"
-version = "1.2.0"
+version = "1.3.0"
 authors = ["Joseph Zurowski <12567900+Dunklheit@users.noreply.github.com>"]
 edition = "2018"
 
@@ -10,5 +10,5 @@ edition = "2018"
 clokwerk = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
-serenity = "0.9.0-rc.1"
+serenity = "0.8"
 tokio = { version = "0.2", features= ["macros"] }
