--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pit-tracker"
-version = "1.3.3"
+version = "2.0.0"
 authors = ["Joseph Zurowski <12567900+Dunklheit@users.noreply.github.com>"]
 edition = "2018"
 
@@ -11,3 +11,4 @@ clokwerk = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 serenity = "0.8"
+uuid = { version = "0.8", features = ["serde", "v4"] }
