--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 clokwerk = "0.3"
+humantime = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 serenity = "0.8"
